# dpvc

./: .gitignore  .gitmodules  CONTROLVC_EXTERNAL_CHANGES.md  CONTROLVC_SETUP.md  FINDINGS.md  IMPLEMENTATION_PLAN_combined-data-pseudolabel-mix.md  IMPLEMENTATION_PLAN_mixed-data-pseudolabel-quality.md  IMPLEMENTATION_PLAN_mixed-data-pseudolabel-teacher.md  IMPLEMENTATION_PLAN_nontrump-style-strength-sweep.md  IMPLEMENTATION_PLAN_post-consolidation-next-queue.md  MEETING_BRIEF_JOE_2026-04-30.md  MEETING_PREP_JOE.md  QUICK_REFERENCE.md  README.md  WORKLOG.md  WRAPPER_IMPLEMENTATION_SUMMARY.md  embedding_vae.pt  extract_openvoice.py  mkdocs.yml  model_embedding_vae.py  pyproject.toml  setup.sh  test_dp_vc.py  test_openvoice.py  test_wrapper.py  train_embedding_vae.py
docs/: controlvc_setup.md  controlvc_wrapper.md  index.md  quick_reference.md  reference.md  training.md  using.md  wrapping.md
dpvc/: __init__.py  anonymizer.py  controlvc.py  model_embedding_vae.py  naturalspeech3.py  naturalspeech3_embedding_vae.pt  openvoice.py  openvoice_embedding_vae.pt  utils.py  vec2wav2.py  wrapper.py
examples/: README.md  controlvc_extract_commonvoice.py  controlvc_extract_expresso.py  controlvc_infer.py  controlvc_infer_controllable.py  controlvc_inference.py  controlvc_train_vae.py  controlvc_train_vae_expresso.py  controlvc_vae.pt  eval_emotion.py  eval_mos.py  eval_novelty.py  eval_wer.py  generate_samples.py  model_embedding_vae.py  naturalspeech3_extract_commonvoice.py  naturalspeech3_inference.py  naturalspeech3_test.py  naturalspeech3_train_vae.py  naturalspeech3_vae.pt  openvoice_combine_datasets.py  openvoice_example.py  openvoice_extract_commonvoice.py  openvoice_extract_commonvoice_features.py  openvoice_extract_cremad.py  openvoice_extract_expresso.py  openvoice_infer_controllable.py  openvoice_inference.py  openvoice_inference_controllable.py  openvoice_pretrain_vae_commonvoice.py  openvoice_train_vae.py  openvoice_train_vae_combined.py  openvoice_train_vae_features.py  openvoice_train_vae_mixed.py  openvoice_vae.pt  openvoice_vae_features.pt  openvoice_vae_features2.pt  vec2wav2_extract_commonvoice.py  vec2wav2_inference.py  vec2wav2_train_vae.py
(+154 files in other folders)
