[build-system]

requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dpvc"
description = "Differentially private voice control"
authors = [{name = "Joe Near", email = "jnear@uvm.edu"}]
version = "0.1"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9,<=3.12"
dependencies = [
    "torch>=2.4.0",
    "numpy>=1.22",
    "MyShell-OpenVoice @ git+https://github.com/myshell-ai/OpenVoice.git",
]

[project.urls]
Repository = "https://github.com/uvm-plaid/dpvc"

[tool.setuptools]
packages = ["dpvc"]
zip-safe = false
